local/app/ingress-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foodapp
  namespace: foodapp
spec:
  ingressClassName: traefik
  rules:
    - host: api.foodapp.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: foodapp
                port:
                  name: http
